# ai-data-engineer-challenge

./: .env.example  .gitignore  CHALLENGE_COMPLETION_SUMMARY.md  Dockerfile  ENVIRONMENT_SETUP.md  LLM_EXTRACTION.md  LLM_EXTRACTION_SUMMARY.md  Makefile  PATIENT_JOURNEY_ANALYTICS.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REDDIT_INGESTION.md  REDDIT_INGESTION_SUMMARY.md  SETUP.md  dagster.yaml  docker-compose.yml  pyproject.toml  solution.md  validate_llm_setup.py  validate_setup.py  workspace.yaml
.github/workflows/: ci.yml
dashboard/: app.py
src/mama_health/: __init__.py  analytics.py  config.py  dagster_definitions.py  db.py  llm_extractor.py  models.py  partitions.py  prompts.py  reddit_client.py
src/mama_health/assets/: __init__.py  analytics.py  llm_extraction.py  reddit_ingestion.py  storage.py
src/mama_health/utils/: __init__.py  logging_utils.py  types.py
tests/: __init__.py  conftest.py  test_analytics.py  test_basic.py  test_dagster_assets.py  test_dagster_definitions.py  test_llm_extraction.py  test_reddit_ingestion.py  test_storage.py
